crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/storage_layout_base_slot/not_constant/generated/slang/0.8.29-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: The base slot of the storage layout must be a compile-time constant expression.
   ╭─[input.sol:6:22]
   │
 6 │ contract C layout at block.timestamp {}
   │                      ───────┬───────  
   │                             ╰───────── Error occurred here.
───╯
